k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: todo-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
            - name: db-init-script
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
        - name: db-init-script
          configMap:
            name: db-init
